# rust-graphql-parsers

./: Cargo.toml  README.md  generate-huge-graphql.js
.github/workflows/: ci.yml
benches/: graphql_parsers.rs
fixtures/queries/: directive.graphql  fragments.graphql  huge.graphql  input.graphql  interfaces.graphql  introspection.graphql  invalid-query.graphql  multiple-ops.graphql  nested-recursive.graphql  nested.graphql  recursive-types.graphql  subscription.graphql  union.graphql  variables.graphql
fixtures/schemas/: custom-directive.graphql  custom-scalar-type.graphql  fragments.graphql  huge.graphql  input.graphql  interfaces.graphql  introspection.graphql  invalid-query.graphql  nested.graphql  recursive-types.graphql  subscription.graphql  union.graphql
src/: main.rs
