[package]
name = "bench-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql-parser = "7.0.11"
graphql-parser = "0.4.0"
graphql-query = "1.0.0"
regex = "1.10.2"
serde_json = "1.0.108"
urlencoding = "2.1.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
[lib]
bench = false

[[bench]]
name = "graphql_parsers"
harness = false
